# stack-2.9

./: .dockerignore  .env.example  .gitattributes  .gitignore  .modelcard.yml  .ruff.toml  CODE_OF_CONDUCT.md  CONTEXT_UPDATE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_TEST_REPORT.md  DIRECTORY_STRUCTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LAUNCH_PLAN.md  LICENSE  MLproject  MODEL_CARD.md  Makefile  OPENROUTER_SUBMISSION_CHECKLIST.md  README.md  TOGETHER_AI.md  TOOLS.md  audit_async.py  audit_report.txt  audit_results.json  audit_tools.py  chat.py  colab_train_stack29.ipynb  comprehensive_audit.py  config.json  context_window_upgrade_summary.md  convert_gguf.py  docker-compose.gpu.yml  evaluate_model.py  exhaustive_tool_verify.py  final_tool_audit.py  generate_20k.py  generate_smart_20k.py  kaggle_train_stack29.ipynb  (+26 more)
.github/: topic-list.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  tests.yml
archived-selective/: BENCHMARK_BADGES.md
archived-selective/cli-backup/: main.py  tools.py
audits/: audit_tools_async.py
benchmarks/: benchmark_context_lengths.py  test_context_window.py
cli/: chat.py  chat_local.py  chat_simple.py  enhanced_chat.py  inference_api.py  run_mcp_server.py
config/: Dockerfile.gpu  package-lock.json  package.json  tsconfig.json
config/k8s/: deployment.yaml  pvc.yaml  service.yaml
docs/: API.md  DATA_FORMAT.md  DIRECTORY_STRUCTURE.md  GIT_PUSH.md  MCP_GUIDE.md  MODEL_CARD.md  MODEL_REGISTRY.md  QUICKSTART.md  README.md  README_QUICKSTART.md  ROADMAP.md  SCALING_PLAN.md  TOOL_DATA_ANALYSIS.md  TRAINING_7B.md  pattern-moat.md  rtmp-integration-plan.md  tools.md
docs/archive/: DATA_SCALING_PLAN.md  EVAL_PLAN.md  LICENSES.md  MAXIMIZATION_PLAN.md  STACK_CLI_README.md
evaluation/: README.md  humaneval_50.jsonl  mbpp_100.jsonl  tool_scenarios_50.jsonl
examples/: demo_stack.py  inference_examples.py
hf_space/: README.md  app.py
k8s/: secret.yaml
loaders/: load_pure.py  load_pytorch.py
notebooks/: colab_128k_training.ipynb  colab_humaneval.ipynb  kaggle_128k_training.ipynb  kaggle_7b_smart_train.ipynb
ollama_model/: README.md
requirements/: requirements.txt
runners/: run_auto.py  run_final.py  run_full.py  run_simple.py  run_v2.py
samples/: conftest.py  demo_agent.py  demo_voice.py  mcp_demo.py  mcp_showcase.py  voice_demo.py
samples/integration/: test_cli.py  test_tool_chains.py
samples/unit/: test_agent.py  test_config.py  test_tools.py
scripts/: .hfignore  README_HF.md  augment_data.py  augment_training_data.py  check_types.sh  combine_all.py  combine_datasets.py  compare_models.py  convert_to_gguf.py  create_mini_dataset.py  download_benchmark_datasets.py  download_public_datasets.py  extract_code_pairs.py  extract_patterns_from_git.py  extract_rtmp_tools.py  extract_rtmp_tools.ts  extract_rtmp_tools_advanced.py  fuse_lora_adapters.py  generate_code_completion_data.py  generate_from_rtmp.ts  generate_random_synthetic.py  generate_synthetic.py  generate_synthetic_v2.py  generate_tool_data.py  generate_tool_use_tests.py  humaneval_eval.py  mine_sessions.py  model_info.py  quality_validate.py  tool_use_evaluator.py  update_context_window.py  validate_training_data.py
scripts/deploy/: runpod_deploy.sh  setup.sh  vastai_deploy.sh
scripts/eval/: mbpp_eval.py
scripts/training/: merge_lora_adapters.py
scripts/upload/: upload_hf.py
self_evolution/: __init__.py  apply.py  learner.py  trainer.py
space/: README.md  app.py
src/: mcp_server.py  stack-2.9-cli.py
src/cli/: __init__.py  agent.py  context.py  main.py  tools.py
src/enhancements/: __init__.py
src/examples/: voice-integration.ts
src/indexing/: CodeIndexer.ts  index.ts
src/llm/: LLMService.ts  index.ts
src/mcp/: MCPClient.ts  index.ts
src/tools/: __init__.py  agent_tool.py  ask_question.py  base.py  config_tool.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  mcp_tool.py  messaging.py  plan_mode.py  registry.py  remote_trigger.py  scheduling.py  skill_tool.py  sleep_tool.py  synthetic_output.py  team_delete.py  team_tool.py  todo_tool.py  tool_discovery.py  (+3 more)
stack-2.9-deploy/: Dockerfile  Makefile  README.md  app.py  config.yaml  deploy.sh  docker-compose.yaml  local_deploy.sh  prometheus.yml  requirements.txt  runpod-template.json  runpod_deploy.sh  validate.sh  vastai-template.json  vastai_deploy.sh  vllm_server.py
stack-2.9-docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  OPENROUTER_SUBMISSION.md  README.md  SETUP.md  TRAINING_DATA.md
stack-2.9-eval/: HUMAN_EVAL_PLAN.md  code_quality_eval.py  context_length_test.py  conversation_eval.py  human_eval.py  mbpp_eval.py  model_client.py  quick_human_eval.sh  run_proper_evaluation.py  self_improve_eval.py  simple_test.py  test_pipeline.py  tool_use_eval.py
stack-2.9-training/: README.md  README_OPTIMIZATION.md  convert_openai.py  data_quality.py  memory.py  merge_adapter.py  observer.py  pattern_miner.py  prepare_data.py  prepare_dataset.py  prepare_dataset_local.py  quantize_awq.py  requirements.txt  run_local.sh  run_training.py  run_training.sh  train_config.yaml  train_config_local.yaml  train_lora.py
stack-2.9-voice/: README.md  docker-compose.yml  voice_client.py  voice_server.py
stack_2_9_training/: train_config_colab.yaml
stack_cli/: __init__.py  agent.py  cli.py  context.py  pyproject.toml  tools.py
test-results/: test_results.xml
tests/: pytest.ini  run_tests.py  test_enhancements.py  test_mcp_stdio.py  test_model.py  test_tools.json  test_tools.py
training/: GEMMA_MIGRATION.md  IMPROVEMENTS.md  data_utils.py  evaluate_model.py  merge_adapter.py  merge_simple.py  run_test.sh  train_extended_context.py  train_gemma.py  train_local.py  train_simple_nobnb.py
training-configs/: README.md  local-pretrain.sh  recipes.md
training-data/: extract-training.js  manifest.json  massive-extract.js  tool_examples.jsonl  tool_examples_combined.jsonl  training-config.json
training-data-expanded/: tool_examples.jsonl
website/: app.js  benchmark.html  index.html
(+150 files in other folders)
