[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devpilot"
version = "0.1.0"
description = "AI-powered voice cloning and synthesis platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Walid Sobhi", email = "walid@example.com"}
]
keywords = ["voice", "cloning", "tts", "speech-synthesis", "ai", "audio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.8"
dependencies = [
    "coqui-tts>=0.20.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
web = [
    "gradio>=3.50.0",
]

[project.scripts]
devpilot = "devpilot.cli:main"
devpilot-web = "devpilot.web:main"

[project.urls]
Homepage = "https://github.com/my-ai-stack/devpilot"
Documentation = "https://github.com/my-ai-stack/devpilot#readme"
Repository = "https://github.com/my-ai-stack/devpilot"
Issues = "https://github.com/my-ai-stack/devpilot/issues"
Changelog = "https://github.com/my-ai-stack/devpilot/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["devpilot*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=devpilot --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
