[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-cli"
version = "2.9.0"
description = "Stack 2.9 CLI and Agent Interface"
readme = "../STACK_CLI_README.md"
license = {text = "MIT"}
authors = [
    {name = "Walid Sobhi", email = "walid@example.com"}
]
keywords = ["cli", "agent", "ai", "automation", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Tools",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "openrouter>=1.0.0",
    "anthropic>=0.8.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
]

[project.scripts]
stack = "stack_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stack_cli*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
